--- a/index.html
+++ b/index.html
@@ -293,12 +293,12 @@
                 </div></div>
 
             <div class="carousel-controls">
-                <a class="carousel-control-prev" role="button" data-slide="prev" href="woodm4.html">
+                <a class="carousel-control-prev" role="button" data-slide="prev" href="#">
                     <span aria-hidden="true" class="mbri-arrow-prev mbr-iconfont"></span>
                     <span class="sr-only">Previous</span>
                 </a>
 
-                <a class="carousel-control-next" role="button" data-slide="next" href="woodm4.html">
+                <a class="carousel-control-next" role="button" data-slide="next" href="#">
                     <span aria-hidden="true" class="mbri-arrow-next mbr-iconfont"></span>
                     <span class="sr-only">Next</span>
                 </a>
