--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <img src="images/images-logo2.png" alt="Mobirise" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-black display-2" href="index.html">DigzFurniture</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-black display-2" href="/">DigzFurniture</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
